Corrijo errores de compilacion